--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gatsby": "^5.14.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
