--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gatsby": "^5.14.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-sass": "^6.14.0",
     "motion": "^12.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
