--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "gatsby": "^5.14.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sass": "^6.14.0",
